--- a/lib/templates/keywords.html
+++ b/lib/templates/keywords.html
@@ -4,7 +4,7 @@
     <h2>Keywords</h2>
     {% for keyword in keywords: %}
     <a href="{{ url_for('get_keyword', keyword=keyword) }}">{{ keyword }}</a> -
-    <a href="{{ url_for('generate',    keywords=keyword) }}">generate</a> -
+    <a href="{{ url_for('get_generate',    keywords=keyword) }}">generate</a> -
     <a href="{{ url_for('get_playlist', keywords=keyword, name=keyword) }}">show</a> -
     <a href="{{ url_for('get_playlist', keywords=keyword, name=keyword, download=1) }}">download</a> -
     <a href="{{ url_for('get_playlist', keywords=keyword, name=keyword, listen=1) }}">listen</a>
