unit tests and cache

--- a/lib/templates/layout.html
+++ b/lib/templates/layout.html
@@ -17,6 +17,7 @@
   <a href="{{ url_for('get_generate') }}">Generate playlists</a><br>
   <a href="{{ url_for('get_consistency') }}">Consistency</a><br>
   <a href="{{ url_for('get_keywords') }}">Keywords</a><br>
+  <a href="/swagger">Swagger</a><br>
   <br>
   {% block body %}{% endblock %}
 </div>
