--- a/lib/web/templates/stats.html
+++ b/lib/web/templates/stats.html
@@ -7,6 +7,6 @@ Artists: {{ stats.artists }}<br />
 Albums: {{ stats.albums }}<br />
 Genres: {{ stats.genres }}<br />
 Keywords: {{ stats.keywords }}<br />
-Size: {{ bytesToHuman(stats.size) }} bytes<br />
+Size: {{ bytesToHuman(stats.size) }}<br />
 Duration: {{ secondsToHuman(stats.duration) }} seconds<br />
 {% endblock %}
