--- a/lib/web/templates/stats.html
+++ b/lib/web/templates/stats.html
@@ -8,5 +8,5 @@ Albums: {{ stats.albums }}<br />
 Genres: {{ stats.genres }}<br />
 Keywords: {{ stats.keywords }}<br />
 Size: {{ bytesToHuman(stats.size) }}<br />
-Duration: {{ secondsToHuman(stats.duration) }} seconds<br />
+Duration: {{ secondsToHuman(stats.duration) }}<br />
 {% endblock %}
