--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -14,7 +14,7 @@
   <strong>Rendered in {{ request_time() }}</strong><br>
   <a href="{{ url_for('get_stats') }}">Stats</a> (<a href="{{ url_for('api_v1.stats') }}">api</a>)<br>
   <a href="{{ url_for('get_artists') }}">Artists</a><br>
-  <a href="{{ url_for('get_generate') }}">Generate playlists</a><br>
+  <a href="{{ url_for('get_generate') }}">Playlist</a> (<a href="{{ url_for('api_v1.playlist') }}">api</a>)<br>
   <a href="{{ url_for('get_consistency') }}">Consistency</a><br>
   <a href="{{ url_for('get_keywords') }}">Keywords</a><br>
   <a href="/swagger">Swagger</a><br>
