--- a/lib/web/templates/artist.html
+++ b/lib/web/templates/artist.html
@@ -2,11 +2,11 @@
 {% block body %}
     <h2>{{ artist }} (albums)</h2>
     {% for album in albums: %}
-    <a href="{{ url_for('get_musics', artist=artist, album=album, keywords=keywords) }}">{{ album }}</a> -
-    <a href="{{ url_for('get_generate', artist=artist, album=album) }}">generate</a> -
-    <a href="{{ url_for('get_playlist', keywords=keywords, artists=artist, albums=album, name=(artist + ' - ' + album)) }}">show</a> -
-    <a href="{{ url_for('get_playlist', keywords=keywords, artists=artist, albums=album, name=(artist + ' - ' + album), download=1) }}">download</a> -
-    <a href="{{ url_for('get_playlist', keywords=keywords, artists=artist, albums=album, name=(artist + ' - ' + album), listen=1) }}">listen</a>
+    <a href="{{ url_for('collection.musics', artist=artist, album=album, keywords=keywords) }}">{{ album }}</a> -
+    <a href="{{ url_for('collection.generate', artist=artist, album=album) }}">generate</a> -
+    <a href="{{ url_for('collection.playlist', keywords=keywords, artists=artist, albums=album, name=(artist + ' - ' + album)) }}">show</a> -
+    <a href="{{ url_for('collection.playlist', keywords=keywords, artists=artist, albums=album, name=(artist + ' - ' + album), download=1) }}">download</a> -
+    <a href="{{ url_for('collection.playlist', keywords=keywords, artists=artist, albums=album, name=(artist + ' - ' + album), listen=1) }}">listen</a>
     <br>
     {% endfor %}
 {% endblock %}
