--- a/lib/web/templates/artists.html
+++ b/lib/web/templates/artists.html
@@ -4,8 +4,8 @@
     <h2>Artists</h2>
     {% for artist in artists: %}
     <a href="/{{ artist }}">{{ artist }}</a> -
-    <a href="{{ url_for('get_generate', artists=artist) }}">generate</a> -
-    <a href="{{ url_for('get_playlist', artists=artist, download=1, name=artist) }}">download</a>
+    <a href="{{ url_for('collection.generate', artists=artist) }}">generate</a> -
+    <a href="{{ url_for('collection.playlist', artists=artist, download=1, name=artist) }}">download</a>
     <br>
     {% endfor %}
 {% endblock %}
