--- a/lib/web/templates/keyword.html
+++ b/lib/web/templates/keyword.html
@@ -1,11 +1,12 @@
 {% extends "layout.html" %}
 
 {% block body %}
+    <h2>Artists ({{ keyword }})</h2>
     {% for artist in artists: %}
-    <a href="{{ url_for('get_albums', keywords=keyword, artist=artist) }}">{{ artist }}</a> -
-    <a href="{{ url_for('get_playlist', keywords=keyword, artists=artist, name=artist + ' - ' + keyword) }}">show</a> -
-    <a href="{{ url_for('get_playlist', keywords=keyword, artists=artist, name=artist + ' - ' + keyword, download=1) }}">download</a> -
-    <a href="{{ url_for('get_playlist', keywords=keyword, artists=artist, name=artist + ' - ' + keyword, listen=1) }}">listen</a>
+    <a href="{{ url_for('collection.albums', keywords=keyword, artist=artist) }}">{{ artist }}</a> -
+    <a href="{{ url_for('collection.playlist', keywords=keyword, artists=artist, name=artist + ' - ' + keyword) }}">show</a> -
+    <a href="{{ url_for('collection.playlist', keywords=keyword, artists=artist, name=artist + ' - ' + keyword, download=1) }}">download</a> -
+    <a href="{{ url_for('collection.playlist', keywords=keyword, artists=artist, name=artist + ' - ' + keyword, listen=1) }}">listen</a>
     <br>
     {% endfor %}
 {% endblock %}
