--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -12,11 +12,11 @@
     {% endif %}
   {% endwith %}
   <strong>Rendered in {{ request_time() }}</strong><br>
-  <a href="{{ url_for('get_stats') }}">Stats</a> (<a href="{{ url_for('api_v1.stats') }}">api</a>)<br>
-  <a href="{{ url_for('get_artists') }}">Artists</a> (<a href="{{ url_for('api_v1.artists') }}">api</a>)<br>
-  <a href="{{ url_for('get_generate') }}">Playlist</a> (<a href="{{ url_for('api_v1.playlist') }}">api</a>)<br>
-  <a href="{{ url_for('get_keywords') }}">Keywords</a> (<a href="{{ url_for('api_v1.keywords') }}">api</a>)<br>
-  <a href="{{ url_for('get_consistency') }}">Consistency</a><br>
+  <a href="{{ url_for('collection.stats') }}">Stats</a> (<a href="{{ url_for('api_v1.stats') }}">api</a>)<br>
+  <a href="{{ url_for('collection.artists') }}">Artists</a> (<a href="{{ url_for('api_v1.artists') }}">api</a>)<br>
+  <a href="{{ url_for('collection.generate') }}">Playlist</a> (<a href="{{ url_for('api_v1.playlist') }}">api</a>)<br>
+  <a href="{{ url_for('collection.keywords') }}">Keywords</a> (<a href="{{ url_for('api_v1.keywords') }}">api</a>)<br>
+  <a href="{{ url_for('collection.consistency') }}">Consistency</a><br>
   <a href="/swagger">Swagger</a><br>
   <br>
   {% block body %}{% endblock %}
