--- a/lib/web/templates/playlist.html
+++ b/lib/web/templates/playlist.html
@@ -1,4 +1,4 @@
 #EXTM3U
 {% for m in musics: %}#EXTINF:{{ m.duration }},{{ m.artist }} - {{ m.title }}
-{{ url_for('get_playlist', _external = True, artists='"'+m.artist+'"', albums='"'+m.album+'"', titles='"'+m.title+'"', download=1, name=download_title(m)) | safe }}
+{{ url_for('collection.playlist', _scheme='https', _external=True, _server=server(), artists='"'+m.artist+'"', albums='"'+m.album+'"', titles='"'+m.title+'"', download=1, name=download_title(m)) | safe }}
 {% endfor %}
