--- a/lib/web/templates/generate.html
+++ b/lib/web/templates/generate.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
+    <h2>Generate</h2>
 <form method="GET" action="/generate">
     {{ form.csrf_token }}
     {#
