--- a/lib/web/templates/keywords.html
+++ b/lib/web/templates/keywords.html
@@ -3,8 +3,8 @@
 {% block body %}
     <h2>Keywords</h2>
     {% for keyword in keywords: %}
-    <a href="{{ url_for('collection.keyword', keyword=keyword) }}">{{ keyword }}</a> -
-    <a href="{{ url_for('collection.generate',    keywords=keyword) }}">generate</a> -
+    <a href="{{ url_for('collection.artists_by_keyword', keyword=keyword) }}">{{ keyword }}</a> -
+    <a href="{{ url_for('collection.generate', keywords=keyword) }}">generate</a> -
     <a href="{{ url_for('collection.playlist', keywords=keyword, name=keyword) }}">show</a> -
     <a href="{{ url_for('collection.playlist', keywords=keyword, name=keyword, download=1) }}">download</a> -
     <a href="{{ url_for('collection.playlist', keywords=keyword, name=keyword, listen=1) }}">listen</a>
