--- a/lib/web/templates/album.html
+++ b/lib/web/templates/album.html
@@ -5,10 +5,9 @@
     {% for m in musics: %}
     {{ m.number }} -
     <a href="{{ url_for('collection.music', artist=m.artist, album=m.album, title=m.title) }}">{{ m.title }}</a> -
-    <a href="{{ url_for('collection.playlist', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m)) }}">show</a> -
-    <a href="{{ url_for('collection.download', artist=m.artist, album=m.album, title=m.title) }}">download</a> -
-    <a href="{{ url_for('collection.playlist', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m), download=1) }}">download (playlist api)</a> -
-    <a href="{{ url_for('collection.playlist', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m), listen=1) }}">listen</a>
+    <a href="{{ url_for('collection.m3u', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m)) }}">m3u</a> -
+    <a href="{{ url_for('collection.zip', artist=m.artist, album=m.album, title=m.title) }}">zip</a> -
+    <a href="{{ url_for('collection.player', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m)) }}">play</a>
     <br>
     {% endfor %}
 {% endblock %}
