--- a/lib/web/templates/artists.html
+++ b/lib/web/templates/artists.html
@@ -5,9 +5,9 @@
     {% for artist in artists: %}
     <a href="{{ url_for('collection.albums', artist=artist) }}">{{ artist }}</a> -
     <a href="{{ url_for('collection.generate', artists=artist) }}">generate</a> -
-    <a href="{{ url_for('collection.playlist', artists=artist, name=artist) }}">show</a> -
-    <a href="{{ url_for('collection.playlist', artists=artist, download=1, name=artist) }}">download</a> -
-    <a href="{{ url_for('collection.playlist', artists=artist, listen=1, name=artist) }}">listen</a>
+    <a href="{{ url_for('collection.m3u', artists=artist, name=artist) }}">m3u</a> -
+    <a href="{{ url_for('collection.zip', artists=artist, name=artist) }}">zip</a> -
+    <a href="{{ url_for('collection.player', artists=artist, name=artist) }}">play</a>
     <br>
     {% endfor %}
 {% endblock %}
