--- a/lib/web/templates/genres.html
+++ b/lib/web/templates/genres.html
@@ -5,9 +5,9 @@
     {% for genre in genres: %}
     <a href="{{ url_for('collection.artists_by_genre', genre=genre) }}">{{ genre }}</a> -
     <a href="{{ url_for('collection.generate', genres=genre) }}">generate</a> -
-    <a href="{{ url_for('collection.playlist', genres=genre, name=genre) }}">show</a> -
-    <a href="{{ url_for('collection.playlist', genres=genre, download=1, name=genre) }}">download</a> -
-    <a href="{{ url_for('collection.playlist', genres=genre, listen=1, name=genre) }}">listen</a>
+    <a href="{{ url_for('collection.m3u', genres=genre, name=genre) }}">m3u</a> -
+    <a href="{{ url_for('collection.zip', genres=genre, name=genre) }}">zip</a> -
+    <a href="{{ url_for('collection.player', genres=genre, name=genre) }}">play</a>
     <br>
     {% endfor %}
 {% endblock %}
