--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -1,5 +1,13 @@
 <!doctype html>
-<title>MusicBot</title>
+<head>
+  {% if title %}
+  <title>{{ title }}</title>
+  {% else %}
+  <title>MusicBot</title>
+  {% endif %}
+  <link rel="stylesheet" type="text/css" href="/static/player.css">
+  <script src="/static/jquery-3.2.1.min.js"></script>
+</head>
 <div class=page>
   <h1><a href="/">MusicBot</a></h1>
   {% with messages = get_flashed_messages() %}
