--- a/lib/web/templates/player.html
+++ b/lib/web/templates/player.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<audio controls id="audio" preload="auto" tabindex="0">
+<audio controls id="audio" preload="auto" tabindex="0" autoplay>
   {% for m in musics: %}
   <source  src="{{ url_for('collection.download', artist=m.artist, album=m.album, title=m.title) }}"/>
   {%- if loop.index == 1 %}{% break %}{% endif %}
