--- a/lib/web/templates/artists.html
+++ b/lib/web/templates/artists.html
@@ -4,13 +4,12 @@
     <h2>Artists</h2>
     {% for artist in artists: %}
     {{ artist }} -
-    <a href="{{ url_for('collection.artist_albums', artist=artist) }}">albums</a> -
-    <a href="{{ url_for('collection.artist_musics', artist=artist) }}">musics</a> -
-    <a href="{{ url_for('collection.artist_stats', artist=artist) }}">stats</a> -
-    <a href="{{ url_for('collection.generate', artists=artist) }}">generate</a> -
+    <a href="{{ url_for('collection.musics', artists=artist) }}">musics</a> -
+    <a href="{{ url_for('collection.albums', artists=artist) }}">albums</a> -
+    <a href="{{ url_for('collection.stats', artists=artist) }}">stats</a> -
     <a href="{{ url_for('collection.m3u', artists=artist, name=artist) }}">m3u</a> -
     <a href="{{ url_for('collection.zip', artists=artist, name=artist) }}">zip</a> -
-    <a href="{{ url_for('collection.player', artists=artist, name=artist) }}">play</a>
+    <a href="{{ url_for('collection.player', artists=artist) }}">play</a>
     <br>
     {% endfor %}
 {% endblock %}
