--- a/lib/web/templates/keywords.html
+++ b/lib/web/templates/keywords.html
@@ -3,11 +3,14 @@
 {% block body %}
     <h2>Keywords</h2>
     {% for keyword in keywords: %}
-    <a href="{{ url_for('collection.artists_by_keyword', keyword=keyword) }}">{{ keyword }}</a> -
+    {{ keyword }} -
+    <a href="{{ url_for('collection.artists', keyword=keyword) }}">artists</a> -
+    <a href="{{ url_for('collection.albums', keyword=keyword) }}">albums</a> -
+    <a href="{{ url_for('collection.musics', keyword=keyword) }}">musics</a> -
     <a href="{{ url_for('collection.generate', keywords=keyword) }}">generate</a> -
     <a href="{{ url_for('collection.m3u', keywords=keyword, name=keyword) }}">m3u</a> -
     <a href="{{ url_for('collection.zip', keywords=keyword, name=keyword) }}">zip</a> -
-    <a href="{{ url_for('collection.player', keywords=keyword, name=keyword) }}">play</a>
+    <a href="{{ url_for('collection.player', keywords=keyword) }}">play</a>
     <br />
     {% endfor %}
 {% endblock %}
