--- a/lib/web/templates/generate.html
+++ b/lib/web/templates/generate.html
@@ -27,6 +27,6 @@
     {{ form.no_titles.label }}<br> {{ form.no_titles(size=5) }}<br>
     {{ form.albums.label }}<br> {{ form.albums(size=5) }}<br>
     {{ form.no_albums.label }}<br> {{ form.no_albums(size=5) }}<br>
-    {{ form.progressive }} - {{ form.generate }}
+    {{ form.form }} - {{ form.play }} - {{ form.zip }} - {{ form.m3u }}
 </form>
 {% endblock %}
