--- a/lib/web/templates/musics.html
+++ b/lib/web/templates/musics.html
@@ -6,8 +6,8 @@
         {% for field in m: %}
         {{ field }} -
         {% endfor %}
-    <a href="{{ url_for('collection.download', artist=m.artist, album=m.album, title=m.title, name=download_title(m)) }}">download</a> -
-    <a href="{{ url_for('collection.listen', artist=m.artist, album=m.album, title=m.title) }}">listen</a> -
+    <a href="{{ url_for('collection.download', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m)) }}">download</a> -
+    <a href="{{ url_for('collection.listen', artists=m.artist, albums=m.album, titles=m.title) }}">listen</a> -
     <a href="{{ url_for('collection.player', artists=m.artist, albums=m.album, titles=m.title) }}">play</a>
     <br>
     {% endfor %}
