added more tests

--- a/lib/web/templates/folders.html
+++ b/lib/web/templates/folders.html
@@ -2,7 +2,7 @@
 {% block body %}
     <h2>Folders</h2>
     {% for folder in folders: %}
-    {{ folder['name'] }}
+    {{ folder }}
     <br>
     {% endfor %}
 {% endblock %}
