--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -26,8 +26,8 @@
   <a href="{{ url_for('collection.genres') }}">Genres</a> (<a href="{{ url_for('api_v1.genres') }}">api</a>)<br>
   <a href="{{ url_for('collection.keywords') }}">Keywords</a> (<a href="{{ url_for('api_v1.keywords') }}">api</a>)<br>
   <a href="{{ url_for('collection.generate') }}">Generate a playlist</a> (<a href="{{ url_for('api_v1.playlist') }}">api</a>)<br>
-  <a href="{{ url_for('collection.filters') }}">Filters</a><br>
-  <a href="{{ url_for('collection.folders') }}">Folders</a><br>
+  <a href="{{ url_for('collection.filters') }}">Filters</a> (<a href="{{ url_for('api_v1.filters') }}">api</a>)<br>
+  <a href="{{ url_for('collection.folders') }}">Folders</a> (<a href="{{ url_for('api_v1.folders') }}">api</a>)<br>
   <a href="{{ url_for('collection.consistency') }}">Consistency</a><br>
   <a href="/swagger">Swagger</a><br>
   <br>
