filters and folders api

--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -23,6 +23,7 @@
   <a href="{{ url_for('collection.stats') }}">Stats</a> (<a href="{{ url_for('api_v1.stats') }}">api</a>)<br>
   <a href="{{ url_for('collection.musics') }}">Musics</a> (<a href="{{ url_for('api_v1.musics') }}">api</a>)<br>
   <a href="{{ url_for('collection.artists') }}">Artists</a> (<a href="{{ url_for('api_v1.artists') }}">api</a>)<br>
+  <a href="{{ url_for('collection.albums') }}">Albums</a> (<a href="{{ url_for('api_v1.albums') }}">api</a>)<br>
   <a href="{{ url_for('collection.genres') }}">Genres</a> (<a href="{{ url_for('api_v1.genres') }}">api</a>)<br>
   <a href="{{ url_for('collection.keywords') }}">Keywords</a> (<a href="{{ url_for('api_v1.keywords') }}">api</a>)<br>
   <a href="{{ url_for('collection.generate') }}">Generate a playlist</a> (<a href="{{ url_for('api_v1.playlist') }}">api</a>)<br>
