--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -6,6 +6,7 @@
   <title>MusicBot</title>
   {% endif %}
   <link rel="stylesheet" type="text/css" href="/static/player.css">
+  <link rel="icon" href="/static/favicon.ico">
   <script src="/static/jquery-3.2.1.min.js"></script>
 </head>
 <div class=page>
