--- a/lib/web/templates/player.html
+++ b/lib/web/templates/player.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block body %}
-<audio controls id="audio" preload="auto" tabindex="0" autoplay volume="1.0">
+<audio controls id="player" preload="auto" tabindex="0" autoplay volume="1.0">
   {% for m in musics: %}
   <source  src="{{ url_for('collection.download', artists=m.artist, albums=m.album, titles=m.title) }}"/>
   {%- if loop.index == 1 %}{% break %}{% endif %}
   {% endfor %}
   Your browser does not support the audio element.
 </audio>
-<ul id="playlist">
+<ul id="playlist" class="list-group">
   {% for m in musics: %}
-  <li {%- if loop.index == 1 %} class='active'{% endif %}>
+  <li class="list-group-item{%- if loop.index == 1 %} active{% endif %}" >
       <a href="{{ url_for('collection.download', artists=m.artist, albums=m.album, titles=m.title) }}">
           {{ download_title(m) }}
       </a>
