--- a/lib/web/templates/artists.html
+++ b/lib/web/templates/artists.html
@@ -1,16 +1,41 @@
 {% extends "layout.html" %}
 
+{% block title %}Artists{% endblock %}
 {% block body %}
-    <h2>Artists</h2>
-    {% for artist in artists: %}
-    {{ artist }} -
-    <a href="{{ url_for('collection.musics', keywords=mf.keywords, artists=artist) }}">musics</a> -
-    <a href="{{ url_for('collection.player', filter="x5", artists=artist) }}">bests</a> -
-    <a href="{{ url_for('collection.albums', keywords=mf.keywords, artists=artist) }}">albums</a> -
-    <a href="{{ url_for('collection.stats', keywords=mf.keywords, artists=artist) }}">stats</a> -
-    <a href="{{ url_for('collection.m3u', keywords=mf.keywords, artists=artist, name=artist) }}">m3u</a> -
-    <a href="{{ url_for('collection.zip', keywords=mf.keywords, artists=artist, name=artist) }}">zip</a> -
-    <a href="{{ url_for('collection.player', keywords=mf.keywords, artists=artist) }}">play</a>
-    <br>
-    {% endfor %}
+    <table class="table table-striped table-condensed">
+      <thead class="thead-inverse">
+        <tr>
+          <th>Artist</th>
+          <th>Musics / Albums</th>
+          <th>Play</th>
+          <th>Download</th>
+          <th>Info</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for artist in artists: %}
+        <tr>
+          <td>{{ artist }}</td>
+          <td>
+            <a href="{{ url_for('collection.musics', keywords=mf.keywords, artists=artist) }}">musics</a> /
+            <a href="{{ url_for('collection.albums', keywords=mf.keywords, artists=artist) }}">albums</a>
+          </td>
+          <td>
+            <a href="{{ url_for('collection.player', keywords=mf.keywords, artists=artist) }}">all</a> /
+            <a href="{{ url_for('collection.player', min_rating=4.0, artists=artist) }}">4+</a> /
+            <a href="{{ url_for('collection.player', min_rating=4.5, artists=artist) }}">4.5+</a> /
+            <a href="{{ url_for('collection.player', min_rating=5.0, artists=artist) }}">5.0</a> /
+            <a href="{{ url_for('collection.player', keywords="best", artists=artist) }}">best</a>
+          </td>
+          <td>
+            <a href="{{ url_for('collection.m3u', keywords=mf.keywords, artists=artist, name=artist) }}">m3u</a> /
+            <a href="{{ url_for('collection.zip', keywords=mf.keywords, artists=artist, name=artist) }}">zip</a>
+          </td>
+          <td>
+            <a href="{{ url_for('collection.stats', keywords=mf.keywords, artists=artist) }}">stats</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
 {% endblock %}
